--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,7 +9,7 @@ body {
 
 .container {
     width: 70%;
-    padding: 1em;
+    padding: 1em auto;
     text-align: left;
     border: 1px solid #ddd;
     margin: 0 auto;
@@ -17,4 +17,17 @@ body {
 
 .container  h1 {
     font-size: 20px;
+}
+
+#cabecera {
+    background-color: #33a;
+    color: white;
+    font-size: 48px;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+
+#post {
+    padding: 1em;
 }
