--- a/css/estilos.css
+++ b/css/estilos.css
@@ -22,6 +22,7 @@ body {
 #cabecera {
     background-color: #33a;
     color: white;
+    font-family: 'Segoe UI';
     font-size: 48px;
     font-weight: bold;
     margin: 0;
