--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,5 @@
 body {
+    background-color: #333;
     color: #333;
     text-align: center;
     font-family: monospace;
@@ -29,6 +30,12 @@ body {
     padding: 0.5em;
 }
 
+#logo {
+    width: 60px;
+    vertical-align: middle;
+}
+
 #post {
+    background-color: white;
     padding: 1em;
 }
